workinhg on it added moran velleman

--- a/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
+++ b/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
@@ -22,6 +22,8 @@
 
 
 
+
+
 %\setromanfont[Mapping=tex-text]{Sabon LT Std} 
 
 \begin{document}
@@ -39,7 +41,7 @@
 The leading, best developed account of shared agency, Michael Bratman's, hinges on the claim that, roughly,
 we have a shared intention if we each intend that we J and also that we J by way of these intentions and meshing subplans of them where this is all common knowledge.
 This paper provides a counterexample to the sufficiency of this condition for shared intention.
-The counterexample arises because it is possible for agents to meet the condition, and to act rationally on the specified knowledge and intentions,
+The counterexample arises because it is possible for agents to meet the condition, and to act rationally on the specified  intentions and knowledge,
  while conceiving of each other's actions only as constraints to work around and opportunities to exploit.
 Shared agency requires more than this, or so we argue.
 We also suggest a way of revising Bratman's account  that is consistent with his general approach.
@@ -384,7 +386,7 @@ But what matters for our counterexample is just that they are possible.
 
 
 \section{The Counterexample}
-%*Need a beefier activity, something more than cooperatively neutral.
+\label{sec:the_counterexample}
 
 In the situation just described,
 Ayesha and Ahmed are playing a game and have different tasks.
@@ -463,7 +465,7 @@ A further motive for introducing this new contrast case is that it provides an i
 
 
 
-\section{Agent-neutral Plans}
+\section{Individually planning all of  the agents' actions}
 \label{sec:distributed_plan}
 
 Above we introduced what will turn out to be a counterexample to Bratman's account, the case of Beatrice and Baldric. 
@@ -478,10 +480,13 @@ we shall contrast Beatrice and Baldric's case with a third case that is as simil
 %This is nicely illustrated in a series of experiments by Sebanz and colleagues in which subject spontaneously take another's plans into account in planning their own actions, even where doing so is manifestly not required and can impair their performance  \citep{Sebanz:2003kf,Sebanz:2005fk,tsai:2011_groop_effect}.
 %}
 
-First we need to introduce the notion of an agent-neutral plan.
+First we need to introduce the notion of an agent-neutral plan and some  observations.
 We stipulate that a planning process, or a plan, is \emph{agent-neutral} just if it does not involve identifying any particular agents.  
 This sort of planning is quite common.
 For example, some housemates who have decided to make a pizza might sit down together to plan what needs doing without yet assigning roles to particular individuals. 
+Someone needs to prepare the dough, 
+another person should prepare toppings,
+while a third might mix some salad.
 In so planning, each housemate is thinking about what is to be done and not what she herself will do.  
 %(This is an idealisation, of course.)
 At some point the housemates stop planning.
@@ -496,67 +501,151 @@ In this example
 	the housemates plan together and agree on a common plan.
 	Planning together is plausibly an activity which involves shared agency.
 	Note, however, that an individual can construct an agent-neutral plan by herself, even if its eventual execution will involve others. 
-	In fact, two or more individuals who are assigned the same task and who will eventually collaborate might first each individually engage in agent-neutral planning.
-	
-Suppose, then, that our pizza-making housemates each individually devise an agent-neutral plan and come up with an assignment of agents to roles.  
-What could ensure that their parallel planning results in identical plans?
-(Strictly speaking it is not necessary for the plans and role assignments to be identical; it is enough if the resulting agent-specifying plans are, in a special sense, compatible.%
-\footnote{
-For an example of compatible plans, suppose that our task is to press a button simultaneously. 
-If your plan is that each of us will to start to act in exactly 60 seconds whereas my plan specifies that you are the leader and we will start to act when you do, then our plans are compatible.
-Consider also a case in which our task is to transport some apples and pears to a warehouse. 
-My plan involves you taking care of the apples while I put the pears into the yellow crates and load them into the van through the side door.
-If your plan involves me taking care of the pears while you put the apples into the green crates and load them into the van through the rear doors, our plans are compatible.
-Here is one way to capture this intuitive notion of compatibility.
-\label{fn:df_compatible}
-Suppose that, for some outcome, two or more agents each have a plan for the realisation of that outcome. 
-(These plans may, but need not, specify roles for all of the agents; but the plans must be agent-specific, not agent-neutral.)
-By saying that these plans are \emph{compatible} we mean that:
-(i) 
-no agent would normally be prevented from performing the role she is assigned in her own plan by other agents performing the roles they are assigned in their plans;
-and
-(ii)
-if all facts about which agents have which roles in which plans were common knowledge to the agents,
-this would not affect the instrumental rationality of their each acting on the intention that they realise the outcome by performing the role she is assigned in her own plan.
-%	each agent could rationally act on the intention that they realise the outcome by performing the role she is assigned in her own plan,
-%	and she could do so even if all facts about which agents are performing which roles in which plans were common knowledge to the agents.
-})
-Communication but not necessary ***here
-	
-		The task demands and their planning strategies may conspire to ensure that they each come up with the same agent-neutral plan.
-	The task demands and manifest properties of the agents, such as their distribution in space, may also ensure that each agent  assigns the same roles to the same individuals.
+	In fact, two or more individuals who are assigned the same task and who will eventually collaborate might first each individually engage in agent-neutral planning and then individually assign roles.
+	And they might do this in isolation from each other, without discussion or communication.
 
-%
-Finally, each agent may know enough about herself and the others to be able to determine, without communicating, whether the plan and role assignments will be acceptable to everyone. 
-	And all of this---that they engage in parallel, agent-neutral planning resulting in identical (or compatible) plans and role assignments, which are acceptable to all---may be common knowledge to the agents.
-	So it is possible, in principle at least, 
-	that several agents might each individually engage in agent-neutral planning and rationally perform their part in the resulting plan, knowing that the others will do likewise.
-	Parallel, agent-neutral planning can rationally result in coordinated action without presupposing shared agency.%
+Where there is an outcome and some agents each individually,
+without discussion or communication,
+plan for the outcome 
+and where each agent has a single plan specifying roles for herself and all of the other agents,
+%When there is an outcome and some agents each individually,
+%without any discussion or communication,
+%construct an agent-neutral plan for this outcome and then assign roles to themselves and the other agents,
+we shall say that these agents each \emph{individually plan all of the agents' actions}.%
 \footnote{
-Note that we are claiming only that shared agency is not presupposed.
-Our view is consistent with (but does not depend on) the claim
-that
-	if some agents each engage in parallel, agent-neutral planning and then rationally perform their part in the resulting plan,
-	the upshot would be an exercise of shared agency.
+This phrase is ambiguous (in a way we know  no way concise of avoiding).
+The idea is that each agent has a single plan in which she and  all other agents are assigned roles.
+There is no requirement that any agent's plan must specify all the actions which the agents between them will perform.
+}
+Agents can do this by first constructing agent-neutral plans and then assigning roles to themselves and the other agents.
+So, to return to our earlier example, 
+ if the housemates, having decided to make a pizza, had each individually devised  agent-neutral plans for the construction of the pizza and then each individually assigned roles in their own plans to themselves and the others, 
+then they would have each individually planed all of the agents' actions.
+
+For all we have said,  agent-neutral plans might not be involved in all cases where some agents each individually plan all of the agents' actions.
+We invoke agent-neutral plans only as an aid to showing that the notion of some 
+agents each individually planning all of the agents' actions is coherent.
+
+
+
+If some agents each individually plan all of the agents' actions, 
+could they nevertheless know  that they will form plans that are sufficiently similar or jointly viable?%
+\footnote{
+\label{fn:df_jointly_viable}
+Suppose that, for some outcome, two or more agents each have a plan for the realisation of that outcome. 
+%(These plans may, but need not, specify roles for all of the agents; but the plans must be agent-specific, not agent-neutral.)
+We stipulate that these plans are  \emph{jointly viable} just if
+the plan which involves each agent performing the roles she is assigned in her own plan is acceptable to all the agents and a viable means of realising the outcome.
+For an example of jointly viable but significantly different plans, suppose that our task is to transport some apples and pears to a warehouse. 
+My plan involves you taking care of the apples while I put the pears into the yellow crates and load them into the van through the side door.
+If your plan involves me taking care of the pears while you put the apples into the green crates and load them into the van through the rear doors, then our plans are compatible.
+Consider also a case in which our task is to press a button simultaneously. 
+If your plan is that each of us will to start to act in exactly 60 seconds whereas my plan specifies that you are the leader and we will start to act when you do, then our plans are jointly viable.
+}
+%Where the agents could bring about an outcome in several different, equally good ways,
+%having some agents each individually plan all of the agents' actions is probably not useful.
+Consider housemates
+	making a pizza together, where everyone knows roughly the same recipe and differences are unlikely to matter.
+Or consider two agents 
+ moving  a table from one room to another together, where there is an obviously optimal route and the agents' positions manifestly determine which ends of the tables they should hold.
+For these outcomes and situations,
+ the agents' expertise and planning strategies 
+ may mean that each could knowledgeably predict that they will form sufficiently similar agent-neutral plans.
+And sometimes commonly known properties of the agents, such as their distribution in space or their sizes, mean that there is exactly one most obvious way of dividing up roles.
+%If  each agent also  knows enough about herself and the others to be able to determine, without communicating, whether her plan and role assignments will be acceptable to everyone, then
+% it need not be irrational for the agents each individually to plan all of the agents' actions. 
+In any such case, the agents who each individually plan all of the agents' actions may form sufficiently similar plans and know that they will do so.
+
+
+Agents who will collaborate in some way, such as by making a pizza together, can coordinate their actions by each individually planning all of the agents' actions.
+Suppose some agents 
+	 are about to act together in order to bring about some outcome.
+They know (we stipulate) that if they each individually plan all of the agents' actions, they will form sufficiently similar plans.
+Each agent also knows enough about herself and the others to be able to determine, without communicating, that the resulting plans will be acceptable to everyone. 
+And all of this is common knowledge to the agents.  
+Then these agents 
+might individually plan all of the agents' actions,
+and each might rationally perform her part in her plan, knowing that the others will do likewise.
+In this way, 
+ some agents' individually planning all of the agents' actions can rationally coordinate their plans and actions.%
+\footnote{
+Note that this coordination is achieved without presupposing that the agents exercise shared agency.
+Of course,
+	if some agents individually plan all of the agents' actions
+	and then each rationally performs her part in her own plan,
+	the upshot might be an exercise of shared agency.
+But this shared agency is a consequence of, not a requirement on, their individually planning all of the agents' actions.
 }
 
 
-Different perspectives are involved in
-	forming a plan for  your own actions  only
+But why would some agents each individually plan all of the agents' actions?
+After all, no agent gets  to perform  others' actions
+(or, if they do, this is exceptional).
+So why would anyone individually plan others' actions, knowing that she won't perform them?
+In many cases, 
+a plan for one agent's actions would need to be constrained by, and to constrain, plans for other agents' actions.
+When, for example,
+two people are about to move a heavy table from one room to the next,
+two separate plans for their individual actions would have to involve compatible timings, forces and routes.
+In principle,  each table-lifter might form an initial plan for her own actions only.
+Each could use her initial plan to make predictions about the  other's likely actions.
+She could then revise the plan for her own actions in the light of these predictions.
+This cycle of prediction and revision might be repeated.
+The plans might also involve conditional elements to accommodate unpredicted actions.
+So when an agent plans only her own actions,
+ she will sometimes need to rely on predictions about what others will do,
+ and these predictions will sometimes depend on what the agent plans to do.
+Another 
+ way to proceed
+	would be for the agent to plan all of the agents' actions,
+perhaps by first making an agent-neutral plan and then assigning roles.
+So the reason why some agents might each plan all of the agents' actions is that doing so provides one way to solve a coordination problem.
+We don't claim that this is the only or best way to coordinate.
+Our claim is just that some agents sometimes achieve coordination in part by means of each agent's individually planning all of the agents' actions.%
+\footnote{
+As an aside, we note that 
+\citet{tsai:2011_groop_effect} provide evidence indicating that planning for one's own and and others' actions happens not only in conscious practical reasoning but also in planning that we may not ordinarily be directly aware of.
+}
+
+Now recall Beatrice and Baldric (from Section \vref{sec:the_counterexample}).
+We said earlier that  they each see the other's actions  as constraints to work around or opportunities to exploit only.
+This is because each agent plans only her own actions.
+Neither agent plans for both of their actions and so neither conceives of both of their actions as parts of a single plan.
+In constructing a case that contrasts with Beatrice and Baldric's we shall rely on the distinction between
+a plan that includes both one's own and others' actions
 and 
-	forming a plan for  your own and others actions.
-%\footnote{
-%Perhaps it is impossible, strictly speaking, to plan others' actions. 
-%In speaking loosely about planning your own and others actions, we mean the activity of constructing an agent-neutral plan and assigning roles as described above.
-%}
-  Of course, in planning your only your own actions, it may be necessary to consider how others' actions will affect, and be affected by, your won.
-But in this case,  others' actions feature in your planning as constraints and opportunities.
-By contrast, forming a plan for your own and others' actions 
-	involves conceiving of your own and the others' actions as elements in a single plan directed to a single outcome.
+a plan that merely exploits, and is constrained by, predictions about the others' actions.
+This distinction matters independently of whether two such plans would result in different actions.
+It matters because 
+forming a plan for your own and others' actions 
+	involves changing perspective.
+That is, it involves conceiving of the others' actions not only as constraints and opportunities, but as on a par with your own actions insofar as your actions and theirs are elements in a single plan directed to a single outcome.
 
+In the case of ordinary, individual agency,
+there is a familiar and  important distinction between merely predicting one's own actions and planning them.%
+%
+\footnote{
+Even Velleman, who argues that `[d]eciding on an action … is just a peculiar way of predicting it' (\citeyear[p.\ 48]{Velleman:1985mc}), can accommodate a distinction between merely predicting and planning actions \citep[see][p.\ 195]{Velleman:2000fq}.
+%“How can one regard a proposition as true in such a way as to make it true? Well, when one accepts a proposition in response to its truth, one registers the influence of evidence and other reasons for belief, thereby manifesting an incli-nation to conform one’s acceptance to the facts. Accepting a proposition in such a way as to make it true would simply require a converse inclination, to conform the facts to one’s acceptance. And one can indeed be inclined to conform the facts to one’s acceptance, if the proposition accepted is about one’s own behavior. One need only be inclined to do what one accepts that one will do. If one has this inclination, then accepting that one will do something can be a way of making this proposition true, and it can therefore be an attempt at accepting the truth.”  (195)
+}
+%
+It is possible and perhaps sometimes useful to make predictions about one's future actions, of course.
+But to rely on predictions about one's own actions in planning can involve a kind of estrangement from oneself \citep[compare][]{Moran:2001hr}.
+We have just been arguing that 
+in the case of shared agency,
+the distinction between predicting and planning actions also applies to the actions of agents other than oneself.
 
-Now that we have some background on agent-neutral plans,
-let us introduce a third and final case.
+Applying this distinction in cases of shared agency requires additional subtlety, of course.
+After all,
+one agent cannot rationally include another's actions in a plan she knows she will act on unless she could predict the other's actions.
+(Or unless she knows the other agent will act directly on the first's intentions---see \citet{roth_shared_agency}.) 
+This fact should not obscure the distinct ways in which one conceives of another agent's actions in planning and predicting them, however.
+For, as we have argued, in some cases planning another agent's actions does not require actually predicting them.
+In some cases, planning another's actions does not depend on having predicted them but rather provides a ground for prediction.
+This is why there is a difference in perspective between merely predicting another's actions and conceiving of them as on a par with one's own in being elements of a single plan.
+ 
+Now that we have some background on how some agents might each individually plan all of the agents' actions,
+we can introduce a third and final case.
 This case needs to be as similar as possible to Beatrice and Baldric's while involving shared agency.
 
 Caitlin and Ciaran start in the same situation as Beatrice and Baldric. 
@@ -573,12 +662,7 @@ So Caitlin ends up with an agent-neutral plan.
 She next assigns one role in the plan to herself and the other to Ciaran.
 At this point Caitlin considers whether she would be prepared to go along with the plan given her intentions, preferences and values, and she also considers whether Ciaran would be prepared to go along with it too. 
 In this case it happens that both would be prepared to go along with the plan.
-Caitlin then knowledgeably predicts that Ciaran, who has similar planning abilities and has been approaching their task in a similar way, will have made an identical or compatible%
-\footnote{
-The notion of compatible is defined in footnote \vref{fn:df_compatible}.
-}
-%
- plan which, like hers, is acceptable to both of them.
+Caitlin then knowledgeably predicts that Ciaran, who has similar planning abilities and has been approaching their task in a similar way, will have made a sufficiently similar plan.
 Finally, Caitlin attempts to carry out her part in her plan; and Ciaran does likewise.
 
 In short, then, Caitlin and Ciaran are like Beatrice and Baldric in nearly every respect. 
@@ -595,11 +679,11 @@ The difference is just that Beatrice and Baldric make no use of the fact that th
 By contrast, Caitlin and Ciaran embrace the fact that they are performing the same task. 
 They may not like having to act together; in fact each may far prefer to act alone were that possible.
 And, like Beatrice and Baldric, they are unconcerned with each other's success except insofar as their own success depends on it.
-But Caitlin and Ciaran nevertheless make use of the fact that they have to perform a single task together by each constructing a single plan covering both of their actions and then carrying out their parts in these plans.
+But Caitlin and Ciaran nevertheless make use of the fact that they have to perform a single task together by each constructing a single plan including both of their actions and then carrying out their parts in these plans.
 So why does Caitlin and Ciaran's case, but not Beatrice and Baldric's, plausibly involve shared agency?
 The reason is  this:
 	 at some stage of the planning which rationally guides and coordinates their actions,
-	Caitlin and Ciaran each conceive of their actions as part of a single plan directed to achieving a single outcome.
+	Caitlin and Ciaran each conceive of both of their actions as parts of a single plan directed to achieving a single outcome.
 
 
 Given the way Beatrice and Baldric's case contrasts with Caitlin and Ciaran's,
@@ -611,13 +695,18 @@ But, by construction,
 
 In describing Caitlin and Ciaran we have not introduced contralateral commitments or any other element foreign to Bratman's account of shared agency. 
 Our counterexample draws on the same planning resources Bratman's account draws on, with just one addition.
-The addition is the idea that agents can conceive, or fail to conceive, of their actions as part of a single plan. 
-In at least some cases, shared agency differs from individual agency in part because shared agency involves changing perspective so that one’s own and others' actions are conceived of as parts of a single plan.
+The addition is the idea that an agent 
+	might plan  her own actions only 
+	or else 
+	might plan both her own and others' actions.
+Agents often conceive of others' actions as external to their own plans, and so as either entirely irrelevant or constraints and opportunities only.
+But shared agency sometimes or always involves agents who each individually plan all of the agents' actions and so conceive of their own and the others' actions  as parts of a single plan.
+In at least some cases, shared agency can be distinguished from individual agency in part because it involves changing perspective in this way.
 
 
 \section{Mundane Counterexamples}
 Beatrice and Baldric's case is a counterexample to the claim that for any J, Bratman's conditions, (1)--(3) on page \pageref{quote:bratman_account}, are collectively sufficient for us to have a shared intention that we J.
-(We called this the `strong claim' earlier, \vpageref{strong_claim}.)
+(We called this the `strong claim'  \vpageref{strong_claim}.)
 If this counterexample were an isolated case, it might be tempting to suppose that it can provide little insight into shared agency.
 %After all, the sorts of activity that Bratman focuses on are things like walking together and painting the house together.
 Could proponents of Bratman's view avoid counterexamples by claiming that the his conditions are sufficient for mundane exercises of shared agency such as those involved in walking together or painting a house together?
